force-app/main/default/objects/PlayerMove__c/PlayerMove__c.object-meta.xml
<CustomObject>
    <label>Player Move</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Player Move Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Moves</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>