force-app/main/default/objects/PlayerMove__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Player Moves</relationshipLabel>
    <relationshipName>PlayerMoves</relationshipName>
    <type>Lookup</type>
</CustomField>