force-app/main/default/objects/PlayerMove__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>Player__r.IsCurrentUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User?</label>
    <type>Checkbox</type>
</CustomField>