force-app/main/default/objects/PlayerMove__c/fields/Move__c.field-meta.xml
<CustomField>
    <fullName>Move__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move</label>
    <referenceTo>Move__c</referenceTo>
    <relationshipLabel>Move Players</relationshipLabel>
    <relationshipName>MovePlayers</relationshipName>
    <type>Lookup</type>
</CustomField>